# sensors_rpi_pico

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  build.py  cmps12.c  cmps12.h  just-sensors.c  main.c  tmp117.c  tmp117.h
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
cmake/: CompilerFlags.cmake
lib/Pico-TMP117-Library/: CMakeLists.txt
lib/veml7700-pico-library/: LICENSE  README.md  VEML7700.c  VEML7700.h
tests/: main.cpp  test_cmps12.cpp  test_cpm_libraries.cpp  test_sensors_integration.cpp  test_tmp117.cpp
